--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Muyiwa's Personal Site</title>
+  <title>Olu's Personal Site</title>
 </head>
 
 <body>
@@ -11,8 +11,9 @@
     The image and the text are very close to eachother. Use the "cellspacing" attribute to create space -->
     <tr>
       <td><img width="190" src="profile_pic.jpeg" alt="ObaPicollo Twitter Profile Picture"></td>
-      <td><h1>Muyiwa Ajayi</h1>
+      <td><h1>Olu Ajayi</h1>
       <p><em>Founder of <strong><a href="https://appbrewery.co/" target="_blank">The App Brewery</a></strong>.</em></p>
+        <!-- DISCLAIMER: I am NOT the founder of the app brewery -->
       <p>I am a networking and infrastructure specialist.</p></td>
     </tr>
   </table>
