--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   <iframe src="https://players.brightcove.net/1031114712001/default_default/index.html?videoId=6204240391001" allowfullscreen="" allow="encrypted-media" width="960" height="540">
   </iframe>
   <br />
+  <a/ href="https://players.brightcove.net/1031114712001/default_default/index.html?videoId=6204240391001" target="_blank">https://players.brightcove.net/1031114712001/default_default/index.html?videoId=6204240391001</a>
+  <br />
   <!-- A link to another html page. In this case hobbies.html -->
   <a/ href="hobbies.html" target="_blank">Hobbies</a>
     <!-- A link to another html page. In this case contact-me.html -->
