--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
   <a/ href="https://players.brightcove.net/1031114712001/default_default/index.html?videoId=6204240391001" target="_blank">https://players.brightcove.net/1031114712001/default_default/index.html?videoId=6204240391001</a>
   <br />
   <br />
+  <div id="video-container"><video id="v1" class="active" muted="" controls="controls" width="100%" height="Auto" data-mce-fragment="1"><source id="source_video" src="https://cdn.encorelearningplatform.com/Prod/UploadedFiles/e4d39f59-3125-438d-a795-194dbb0de1b0Include_or_exclude_specific_words_in_an_iManage_search.webm" type="video/mp4" /></video></div>
+  <br />
+  <br />
   <!-- A link to another html page. In this case hobbies.html -->
   <a/ href="hobbies.html" target="_blank">Hobbies</a>
     <!-- A link to another html page. In this case contact-me.html -->
